<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FragmentHome">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_purple_header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/bg_purple_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="24dp"
            android:text="@string/name_people"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/iv_profile"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_ads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="2dp"
            android:text="@string/ads"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@id/iv_profile"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_profile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_select_language"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_language"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_cart"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="60dp"
            android:src="@drawable/ic_cart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_banner"
        android:layout_width="365dp"
        android:layout_height="120dp"
        android:layout_marginTop="-90dp"
        android:layout_marginEnd="0dp"
        app:cardElevation="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_purple_header">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/img_banner_diskon" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_diskon" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="20dp"
            android:text="@string/discount_50"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="50dp"
            android:text="@string/order_your_food_through_my_app_nand_get_your_discount"
            android:textColor="@color/white" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginStart="310dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/ic_next_slide_banner" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginStart="325dp"
            android:layout_marginTop="100dp"
            android:alpha="0.5"
            android:src="@drawable/ic_next_slide_banner" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginStart="340dp"
            android:layout_marginTop="100dp"
            android:alpha="0.3"
            android:src="@drawable/ic_next_slide_banner" />


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/cv_menu1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="14dp"
        android:src="@drawable/ic_nasi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_banner" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/cv_menu2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="14dp"
        android:src="@drawable/ic_mie"
        app:layout_constraintStart_toEndOf="@id/cv_menu1"
        app:layout_constraintTop_toBottomOf="@id/cv_banner" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/cv_menu3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="14dp"
        android:src="@drawable/ic_snack"
        app:layout_constraintStart_toEndOf="@id/cv_menu2"
        app:layout_constraintTop_toBottomOf="@id/cv_banner" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/cv_menu4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:src="@drawable/ic_minuman"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cv_menu3"
        app:layout_constraintTop_toBottomOf="@id/cv_banner" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_rice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-4dp"
        android:text="@string/rice"
        android:textColor="@color/ungu_tua"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/cv_menu1"
        app:layout_constraintStart_toStartOf="@id/cv_menu1"
        app:layout_constraintTop_toBottomOf="@id/cv_menu1" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_noodles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-4dp"
        android:text="@string/noodles"
        android:textColor="@color/ungu_tua"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/cv_menu2"
        app:layout_constraintStart_toStartOf="@id/cv_menu2"
        app:layout_constraintTop_toBottomOf="@id/cv_menu2" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_snack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-4dp"
        android:text="@string/snack"
        android:textColor="@color/ungu_tua"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/cv_menu3"
        app:layout_constraintStart_toStartOf="@id/cv_menu3"
        app:layout_constraintTop_toBottomOf="@id/cv_menu3" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_drink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-4dp"
        android:text="@string/drink"
        android:textColor="@color/ungu_tua"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/cv_menu4"
        app:layout_constraintStart_toStartOf="@id/cv_menu4"
        app:layout_constraintTop_toBottomOf="@id/cv_menu4" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_food_menu_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="14dp"
        android:text="@string/food_menu_list"
        android:textColor="@color/ungu_tua"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_rice" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_food_menu_list">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:itemCount="10"
                tools:listitem="@layout/item_list" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

    <Switch
        android:id="@+id/listSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="16dp"
        android:text="List"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_drink"
        tools:checked="false"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>